finish profile page

--- a/Frontend - Organi/blog.html
+++ b/Frontend - Organi/blog.html
@@ -230,8 +230,8 @@
                                    </a>
                                    
 
-                                   <a href="product.html">
-                                    <li> Product Detail</li>
+                                   <a href="shop.html">
+                                    <li>Shop</li>
                                    </a>
                                   
 
@@ -313,8 +313,6 @@
 <!--HEADER-END-->
 
 
-
-
   <!--MAIN-START-->
 
   <main>
@@ -340,7 +338,7 @@
 
     <!--BLOG-START-->
 
-    <section id="blog" class="mt-4">
+    <section id="blog" class="my-5">
       <div class="container">
 
         <div class="breadcrumb-sortby d-flex">
@@ -525,7 +523,7 @@
                 </div>
               </div>
 
-              <div class="col-sm-12 col-md-12 col-lg-12">
+              <!-- <div class="col-sm-12 col-md-12 col-lg-12">
                 <div class="blog">
                   <div class="blog-image">
                     <img src="assets/images/blogs/blog4.jpg" alt="">
@@ -617,7 +615,7 @@
 
                   </div>
                 </div>
-              </div>
+              </div> -->
 
             </div>
           </div>
@@ -734,7 +732,7 @@
               </div>
 
               <div class="banner">
-                <img src="assets/images/banners/banner8.jpg!w700wp" alt="">
+                <img src="assets/images/banners/banner8.png" alt="">
               </div>
             </div>
 
@@ -769,7 +767,7 @@
 
   <footer>
 
-    <section id="footer" class="mt-5">
+    <section id="footer">
 
       <div class="bg-image position-relative" style="background-image: url(assets/images/backgrounds/background4.png);">
 
@@ -787,7 +785,7 @@
 
                 <form class="input">
                   <input class="form-control" type="text" placeholder="Email Address">
-                  <button type="submit" class="btn btn-success subscribe-btn" href="">Subscribe</a>
+                  <button type="submit" class="btn btn-success subscribe-btn" href="">Subscribe</button>
                 </form>
 
               </div>
@@ -823,7 +821,7 @@
                     <h4>Account</h4>
                   </a>
                   <ul>
-                    <li><a href="login.html">Account</a></li>
+                    <li><a href="register.html">Account</a></li>
                     <li><a href="cart.html">Shopping Cart</a></li>
                     <li><a href="wishlist.html">Wishlist</a></li>
                     <li><a href="">Order History</a></li>
