--- a/Frontend - Organi/product.html
+++ b/Frontend - Organi/product.html
@@ -233,8 +233,8 @@
                                         </a>
 
 
-                                        <a href="product.html">
-                                            <li> Product Detail</li>
+                                        <a href="shop.html">
+                                            <li>Shop</li>
                                         </a>
 
 
@@ -395,7 +395,7 @@
                                 <div class="product-code-stock">
                                     <div class="product-code">
                                         <h2>UPC</h2>
-                                        <span>0 12345 67890 5</span>
+                                        <span>123456</span>
                                     </div>
 
                                     <div class="product-stock">
@@ -654,7 +654,7 @@
 
                                 <form class="input">
                                     <input class="form-control" type="text" placeholder="Email Address">
-                                    <button type="submit" class="btn btn-success subscribe-btn" href="">Subscribe</a>
+                                    <button type="submit" class="btn btn-success subscribe-btn" href="">Subscribe</button>
                                 </form>
 
                             </div>
@@ -693,7 +693,7 @@
                                         <h4>Account</h4>
                                     </a>
                                     <ul>
-                                        <li><a href="login.html">Account</a></li>
+                                        <li><a href="register.html">Account</a></li>
                                         <li><a href="cart.html">Shopping Cart</a></li>
                                         <li><a href="wishlist.html">Wishlist</a></li>
                                         <li><a href="">Order History</a></li>
