--- a/Frontend - Organi/shop.html
+++ b/Frontend - Organi/shop.html
@@ -230,8 +230,8 @@
                                    </a>
                                    
 
-                                   <a href="product.html">
-                                    <li> Product Detail</li>
+                                   <a href="shop.html">
+                                    <li>Shop</li>
                                    </a>
                                   
 
@@ -343,7 +343,7 @@
 
     <!--FILTER-START-->
 
-    <section id="filtering" class="mt-4">
+    <section id="filtering" class="my-4">
 
 
       <div class="row" style="width: 100%;">
@@ -1492,229 +1492,6 @@
                 </div>
               </div>
 
-              <div class="col-sm-12 col-md-6 col-lg-3">
-                <div class="product card" style="width: 18rem;">
-
-                  <div class="product-images">
-                    <a href="product.html">
-                      <img class="image1" src="assets/images/products/butter1.png" alt="">
-                      <img class="image2" src="assets/images/products/butter2.png" alt="">
-                    </a>
-
-                  </div>
-
-                  <div class="product-add-to-wishlist">
-                    <a href="#">
-                      <span class="wishlist">Add to wishlist</span>
-                      <i class="fa-regular fa-heart"></i>
-                      <i class="fa-solid fa-heart d-none"></i>
-                    </a>
-                  </div>
-
-                  <div class="product-shuffle-eyeglasses">
-                    <div class="icons">
-                      <i class="fa-solid fa-shuffle"></i>
-                      <span class="vertical-line"></span>
-                      <i class="fa-solid fa-glasses"></i>
-                    </div>
-                  </div>
-
-                  <div class="product-featured">
-                    <span>New</span>
-
-                  </div>
-
-                  <div class="product-content card-body">
-
-                    <div class="product-rating">
-                      <i class="fa-solid fa-star active"></i>
-                      <i class="fa-solid fa-star active"></i>
-                      <i class="fa-solid fa-star active"></i>
-                      <i class="fa-solid fa-star active"></i>
-                      <i class="fa-solid fa-star active"></i>
-                    </div>
-                    <span class="product-review">Reviews (3)</span>
-                    <h6 class="product-name">Butter</h6>
-                    <h6 class="product-price"><span class="discount">$34</span><span>$28</span><span>(15%
-                        discount)</span></h6>
-                    <a href="#" class="product-add-to-cart"><i class="fas fa-shopping-basket"></i>Add to
-                      cart</a>
-
-
-                  </div>
-
-
-
-                </div>
-              </div>
-
-              <div class="col-sm-12 col-md-6 col-lg-3">
-                <div class="product card" style="width: 18rem;">
-
-                  <div class="product-images">
-                    <a href="product.html">
-                      <img class="image1" src="assets/images/products/cheese1.png" alt="">
-                      <img class="image2" src="assets/images/products/cheese2.png" alt="">
-                    </a>
-
-                  </div>
-
-                  <div class="product-add-to-wishlist">
-                    <a href="#">
-                      <span class="wishlist">Add to wishlist</span>
-                      <i class="fa-regular fa-heart"></i>
-                      <i class="fa-solid fa-heart d-none"></i>
-                    </a>
-                  </div>
-
-                  <div class="product-shuffle-eyeglasses">
-                    <div class="icons">
-                      <i class="fa-solid fa-shuffle"></i>
-                      <span class="vertical-line"></span>
-                      <i class="fa-solid fa-glasses"></i>
-                    </div>
-                  </div>
-
-                  <div class="product-featured">
-                    <span>New</span>
-
-                  </div>
-
-                  <div class="product-content card-body">
-
-                    <div class="product-rating">
-                      <i class="fa-solid fa-star active"></i>
-                      <i class="fa-solid fa-star active"></i>
-                      <i class="fa-solid fa-star active"></i>
-                      <i class="fa-solid fa-star active"></i>
-                      <i class="fa-solid fa-star active"></i>
-                    </div>
-                    <span class="product-review">Reviews (3)</span>
-                    <h6 class="product-name">Cheese</h6>
-                    <h6 class="product-price"><span class="discount">$34</span><span>$28</span><span>(15%
-                        discount)</span></h6>
-                    <a href="#" class="product-add-to-cart"><i class="fas fa-shopping-basket"></i>Add to
-                      cart</a>
-
-                  </div>
-
-
-
-                </div>
-              </div>
-
-              <div class="col-sm-12 col-md-6 col-lg-3">
-                <div class="product card" style="width: 18rem;">
-
-                  <div class="product-images">
-                    <a href="product.html">
-                      <img class="image1" src="assets/images/products/hamburger1.png" alt="">
-                      <img class="image2" src="assets/images/products/hamburger2.png" alt="">
-                    </a>
-
-                  </div>
-
-                  <div class="product-add-to-wishlist">
-                    <a href="#">
-                      <span class="wishlist">Add to wishlist</span>
-                      <i class="fa-regular fa-heart"></i>
-                      <i class="fa-solid fa-heart d-none"></i>
-                    </a>
-                  </div>
-
-                  <div class="product-shuffle-eyeglasses">
-                    <div class="icons">
-                      <i class="fa-solid fa-shuffle"></i>
-                      <span class="vertical-line"></span>
-                      <i class="fa-solid fa-glasses"></i>
-                    </div>
-                  </div>
-
-                  <div class="product-featured">
-                    <span>New</span>
-
-                  </div>
-
-                  <div class="product-content card-body">
-
-                    <div class="product-rating">
-                      <i class="fa-solid fa-star active"></i>
-                      <i class="fa-solid fa-star active"></i>
-                      <i class="fa-solid fa-star active"></i>
-                      <i class="fa-solid fa-star active"></i>
-                      <i class="fa-solid fa-star active"></i>
-                    </div>
-                    <span class="product-review">Reviews (3)</span>
-                    <h6 class="product-name">Burger</h6>
-                    <h6 class="product-price"><span class="discount">$34</span><span>$28</span><span>(15%
-                        discount)</span></h6>
-                    <a href="#" class="product-add-to-cart"><i class="fas fa-shopping-basket"></i>Add to
-                      cart</a>
-
-
-                  </div>
-
-
-
-                </div>
-              </div>
-
-              <div class="col-sm-12 col-md-6 col-lg-3">
-                <div class="product card" style="width: 18rem;">
-
-                  <div class="product-images">
-                    <a href="product.html">
-                      <img class="image1" src="assets/images/products/pizza1.png" alt="">
-                      <img class="image2" src="assets/images/products/pizza2.png" alt="">
-                    </a>
-
-                  </div>
-
-                  <div class="product-add-to-wishlist">
-                    <a href="#">
-                      <span class="wishlist">Add to wishlist</span>
-                      <i class="fa-regular fa-heart"></i>
-                      <i class="fa-solid fa-heart d-none"></i>
-                    </a>
-                  </div>
-
-                  <div class="product-shuffle-eyeglasses">
-                    <div class="icons">
-                      <i class="fa-solid fa-shuffle"></i>
-                      <span class="vertical-line"></span>
-                      <i class="fa-solid fa-glasses"></i>
-                    </div>
-                  </div>
-
-                  <div class="product-featured">
-                    <span>New</span>
-
-                  </div>
-
-                  <div class="product-content card-body">
-
-                    <div class="product-rating">
-                      <i class="fa-solid fa-star active"></i>
-                      <i class="fa-solid fa-star active"></i>
-                      <i class="fa-solid fa-star active"></i>
-                      <i class="fa-solid fa-star active"></i>
-                      <i class="fa-solid fa-star active"></i>
-                    </div>
-                    <span class="product-review">Reviews (3)</span>
-                    <h6 class="product-name">Pizza</h6>
-                    <h6 class="product-price"><span class="discount">$34</span><span>$28</span><span>(15%
-                        discount)</span></h6>
-                    <a href="#" class="product-add-to-cart"><i class="fas fa-shopping-basket"></i>Add to
-                      cart</a>
-
-
-                  </div>
-
-
-
-                </div>
-              </div>
-
             </div>
 
           </div>
@@ -1750,7 +1527,7 @@
 
   <footer>
 
-    <section id="footer" class="mt-5">
+    <section id="footer">
 
       <div class="bg-image position-relative" style="background-image: url(assets/images/backgrounds/background4.png);">
 
@@ -1768,7 +1545,7 @@
 
                 <form class="input">
                   <input class="form-control" type="text" placeholder="Email Address">
-                  <button type="submit" class="btn btn-success subscribe-btn" href="">Subscribe</a>
+                  <button type="submit" class="btn btn-success subscribe-btn" href="">Subscribe</button>
                 </form>
 
               </div>
@@ -1804,7 +1581,7 @@
                     <h4>Account</h4>
                   </a>
                   <ul>
-                    <li><a href="login.html">Account</a></li>
+                    <li><a href="register.html">Account</a></li>
                     <li><a href="cart.html">Shopping Cart</a></li>
                     <li><a href="wishlist.html">Wishlist</a></li>
                     <li><a href="">Order History</a></li>
