--- a/Frontend - Organi/contact.html
+++ b/Frontend - Organi/contact.html
@@ -230,8 +230,8 @@
                                    </a>
                                    
 
-                                   <a href="product.html">
-                                    <li> Product Detail</li>
+                                   <a href="shop.html">
+                                    <li>Shop</li>
                                    </a>
                                   
 
@@ -535,7 +535,7 @@
 
     <!--CITY-START-->
 
-    <section id="city" class="mt-5">
+    <section id="city" class="my-5">
       <h1>Our Stores</h1>
       <div class="row" style="width: 100%;">
         <div class="col-ms-12 col-md-6 col-lg-3">
@@ -600,7 +600,7 @@
 
   <footer>
 
-    <section id="footer" class="mt-5">
+    <section id="footer">
 
       <div class="bg-image position-relative" style="background-image: url(assets/images/backgrounds/background4.png);">
 
@@ -618,7 +618,7 @@
 
                 <form class="input">
                   <input class="form-control" type="text" placeholder="Email Address">
-                  <button type="submit" class="btn btn-success subscribe-btn" href="">Subscribe</a>
+                  <button type="submit" class="btn btn-success subscribe-btn" href="">Subscribe</button>
                 </form>
 
               </div>
@@ -654,7 +654,7 @@
                     <h4>Account</h4>
                   </a>
                   <ul>
-                    <li><a href="login.html">Account</a></li>
+                    <li><a href="register.html">Account</a></li>
                     <li><a href="cart.html">Shopping Cart</a></li>
                     <li><a href="wishlist.html">Wishlist</a></li>
                     <li><a href="">Order History</a></li>
