--- a/Frontend - Organi/login.html
+++ b/Frontend - Organi/login.html
@@ -230,8 +230,8 @@
                                    </a>
                                    
 
-                                   <a href="product.html">
-                                    <li> Product Detail</li>
+                                   <a href="shop.html">
+                                    <li>Shop</li>
                                    </a>
                                   
 
@@ -462,7 +462,7 @@
 
                                 <form class="input">
                                     <input class="form-control" type="text" placeholder="Email Address">
-                                    <button type="submit" class="btn btn-success subscribe-btn" href="">Subscribe</a>
+                                    <button type="submit" class="btn btn-success subscribe-btn" href="">Subscribe</button>
                                 </form>
 
                             </div>
@@ -501,7 +501,7 @@
                                         <h4>Account</h4>
                                     </a>
                                     <ul>
-                                        <li><a href="login.html">Account</a></li>
+                                        <li><a href="register.html">Account</a></li>
                                         <li><a href="cart.html">Shopping Cart</a></li>
                                         <li><a href="wishlist.html">Wishlist</a></li>
                                         <li><a href="">Order History</a></li>
