finish responsive of blog page

--- a/Frontend - Organi/blog.html
+++ b/Frontend - Organi/blog.html
@@ -692,15 +692,15 @@
               </div>
 
               <div class="blog-items">
-                <h5>Product Tags</h5>
+                <h5>Categories</h5>
                 <ul class="product-categories">
-                  <li>Vegan Life<span>(20) products</span></li>
-                  <li>Healhty Food<span>(15) products</span></li>
-                  <li>Life Style<span>(12) products</span></li>
-                  <li>Delicious<span>(10) products</span></li>
                   <li>Vegetables<span>(8) products</span></li>
-                  <li>Food<span>(11) products</span></li>
-                  <li>Organic<span>(13) products</span></li>
+                  <li>Fruits<span>(8) products</span></li>
+                  <li>Sea Foods<span>(8) products</span></li>
+                  <li>Dry Foods<span>(8) products</span></li>
+                  <li>Fast Foods<span>(8) products</span></li>
+                  <li>Dairy Foods<span>(8) products</span></li>
+                  <li>Drinks<span>(8) products</span></li>
                 </ul>
 
               </div>
@@ -708,13 +708,15 @@
               <div class="blog-items">
                 <h5>Tags</h5>
                 <div class="tags">
-                  <span>#veganlife</span>
-                  <span>#healthyfood</span>
-                  <span>#lifestyle</span>
-                  <span>#delicious</span>
-                  <span>#vegetables</span>
-                  <span>#food</span>
-                  <span>#organic</span>
+                  <span>#Vegetables</span>
+                  <span>#Healthy Food</span>
+                  <span>#Life Style</span>
+                  <span>#Food</span>
+                  <span>#Vegan Life</span>
+                  <span>#Delicious</span>
+                  <span>#Organic</span>
+                  <span>#Vegetarian</span>
+                  <span>#Homemade</span>
                 </div>
 
               </div>
