finish responsive of shop page

--- a/Frontend - Organi/about.html
+++ b/Frontend - Organi/about.html
@@ -392,6 +392,7 @@
               <div class="about-services">
 
                 <div class="service-item">
+
                   <div class="service">
                     <div class="service-image">
                       <img src="assets/images/services/money-back.png" alt="">
@@ -411,9 +412,6 @@
                       <p>On all orders over $60.00</p>
                     </div>
                   </div>
-                </div>
-
-                <div class="service-item">
 
                   <div class="service">
                     <div class="service-image">
@@ -434,10 +432,9 @@
                       <p>Your money is 100% secure</p>
                     </div>
                   </div>
+                  
                 </div>
-
               </div>
-
             </div>
           </div>
         </div>
@@ -793,7 +790,7 @@
                   <ul>
                     <li><a href="contact.html"><span>Address: </span>1429 Netus Rd, NY 48247</a></li>
                     <li><a href="contact.html"><span>Email: </span>organi_824@gmail.com</a></li>
-                    <li><a href="contact.html"><span>Phone: </span>(+994) 050-717-18-30</a></li>
+                    <li><a href="contact.html"><span>Phone: </span>+1 (646) 555-3911</a></li>
                     <li><a href=""><span>Payment Accepted</span></a></li>
                     <li><a href=""><img src="assets/images/info-logos/payment.png" alt=""></a></li>
                   </ul>
