--- a/Frontend - Organi/contact.html
+++ b/Frontend - Organi/contact.html
@@ -387,7 +387,7 @@
 
                   <div class="info">
                     <span>Visit Store</span>
-                    <p>1429 Netus Rd, NY 48247, New York</p>
+                    <p>1429 Netus Rd, NY 48247</p>
                   </div>
 
                 </div>
@@ -432,8 +432,11 @@
             </div>
 
             <div class="contact-image mt-5">
-              <img src="assets/images/cities/city1.jpeg" alt="">
-              <p>1429 Netus Rd, NY 48247, New York <br> USA</p>
+              <img src="assets/images/cities/city1_.jpg" alt="">
+              <div class="contact-content">
+                <p>1429 Netus Rd NY 48247, New York</p>
+                <span>+1 (646) 555-7212</span>  
+             </div>
             </div>
 
           </div>
@@ -539,17 +542,17 @@
       <h1>Our Stores</h1>
       <div class="row" style="width: 100%;">
         <div class="col-ms-12 col-md-6 col-lg-3">
-          <div class="city city1" style="background-image: url(assets/images/cities/city2.jpg);">
+          <div class="city city1" style="background-image: url(assets/images/cities/city1_.jpg);">
           </div>
           <div class="city-address">
-            <p>St. Mark's Place, New York</p>
-            <span>+1 (646) 555-5993</span>
+            <p>1429 Netus Rd NY 48247, New York</p>
+            <span>+1 (646) 555-7212</span>
           </div>
 
         </div>
 
         <div class="col-ms-12 col-md-6 col-lg-3">
-          <div class="city city2" style="background-image: url(assets/images/cities/city3.jpg);">
+          <div class="city city2" style="background-image: url(assets/images/cities/city2_.jpg);">
           </div>
           <div class="city-address">
             <p>Kichijoji Sun Road 45, Tokio</p>
@@ -559,7 +562,7 @@
         </div>
 
         <div class="col-ms-12 col-md-6 col-lg-3">
-          <div class="city city3" style="background-image: url(assets/images/cities/city4.jpg);">
+          <div class="city city3" style="background-image: url(assets/images/cities/city3_.jpg);">
           </div>
           <div class="city-address">
             <p>Lugarno Torrig Road 73, Italy</p>
@@ -569,7 +572,7 @@
         </div>
 
         <div class="col-ms-12 col-md-6 col-lg-3">
-          <div class="city city4" style="background-image: url(assets/images/cities/city5.jpg);">
+          <div class="city city4" style="background-image: url(assets/images/cities/city4_.jpg);">
           </div>
           <div class="city-address">
             <p>Ru Château Road 35, France</p>
