--- a/Frontend - Organi/shop.html
+++ b/Frontend - Organi/shop.html
@@ -602,7 +602,6 @@
 
             <div class="tab-content mt-4" id="pills-tabContent">
 
-
               <div class="col-sm-12 col-md-6 col-lg-3">
 
                 <div class="product card" style="width: 18rem;">
@@ -655,6 +654,8 @@
                   </div>
 
                 </div>
+
+
 
               </div>
 
@@ -768,7 +769,7 @@
               </div>
 
               <div class="col-sm-12 col-md-6 col-lg-3">
-                <div class="product card" style="width: 18rem;">
+                <div class="product card product-out-of-stock" style="width: 18rem;">
 
                   <div class="product-images">
                     <a href="product.html">
@@ -780,22 +781,22 @@
 
                   <div class="product-add-to-wishlist">
                     <a href="#">
-                      <span class="wishlist">Add to wishlist</span>
-                      <i class="fa-regular fa-heart"></i>
+                      <span class="no-wishlist wishlist">Add to wishlist</span>
+                      <i class="fa-regular fa-heart stop-animation"></i>
                       <i class="fa-solid fa-heart d-none"></i>
                     </a>
                   </div>
 
                   <div class="product-shuffle-eyeglasses">
                     <div class="icons">
-                      <i class="fa-solid fa-shuffle"></i>
+                      <i class="fa-solid fa-shuffle stop-animation"></i>
                       <span class="vertical-line"></span>
-                      <i class="fa-solid fa-glasses"></i>
+                      <i class="fa-solid fa-glasses stop-animation"></i>
                     </div>
                   </div>
 
                   <div class="product-featured">
-                    <span>New</span>
+                    <span class="stop-animation">New</span>
 
                   </div>
 
@@ -812,11 +813,12 @@
                     <h6 class="product-name">Eggplant</h6>
                     <h6 class="product-price"><span class="discount">$34</span><span>$28</span><span>(15%
                         discount)</span></h6>
-                    <a href="#" class="product-add-to-cart"><i class="fas fa-shopping-basket"></i>Add to
+                    <a href="#" class="product-add-to-cart no-hover"><i class="fas fa-shopping-basket stop-animation"></i>Add to
                       cart</a>
 
-
                   </div>
+
+                  <div class="out-of-stock">Out Of Stock</div>
 
 
 
@@ -880,7 +882,7 @@
               </div>
 
               <div class="col-sm-12 col-md-6 col-lg-3">
-                <div class="product card" style="width: 18rem;">
+                <div class="product card product-out-of-stock" style="width: 18rem;">
 
                   <div class="product-images">
                     <a href="product.html">
@@ -892,22 +894,22 @@
 
                   <div class="product-add-to-wishlist">
                     <a href="#">
-                      <span class="wishlist">Add to wishlist</span>
-                      <i class="fa-regular fa-heart"></i>
+                      <span class="no-wishlist wishlist">Add to wishlist</span>
+                      <i class="fa-regular fa-heart stop-animation"></i>
                       <i class="fa-solid fa-heart d-none"></i>
                     </a>
                   </div>
 
                   <div class="product-shuffle-eyeglasses">
                     <div class="icons">
-                      <i class="fa-solid fa-shuffle"></i>
+                      <i class="fa-solid fa-shuffle stop-animation"></i>
                       <span class="vertical-line"></span>
-                      <i class="fa-solid fa-glasses"></i>
+                      <i class="fa-solid fa-glasses stop-animation"></i>
                     </div>
                   </div>
 
                   <div class="product-featured">
-                    <span>New</span>
+                    <span class="stop-animation">New</span>
 
                   </div>
 
@@ -924,11 +926,13 @@
                     <h6 class="product-name">Cocktail</h6>
                     <h6 class="product-price"><span class="discount">$34</span><span>$28</span><span>(15%
                         discount)</span></h6>
-                    <a href="#" class="product-add-to-cart"><i class="fas fa-shopping-basket"></i>Add to
+                    <a href="#" class="product-add-to-cart no-hover"><i class="fas fa-shopping-basket stop-animation"></i>Add to
                       cart</a>
 
 
                   </div>
+
+                  <div class="out-of-stock">Out Of Stock</div>
 
 
 
@@ -1159,7 +1163,7 @@
               </div>
 
               <div class="col-sm-12 col-md-6 col-lg-3">
-                <div class="product card" style="width: 18rem;">
+                <div class="product card product-out-of-stock" style="width: 18rem;">
 
                   <div class="product-images">
                     <a href="product.html">
@@ -1171,22 +1175,22 @@
 
                   <div class="product-add-to-wishlist">
                     <a href="#">
-                      <span class="wishlist">Add to wishlist</span>
-                      <i class="fa-regular fa-heart"></i>
+                      <span class="no-wishlist wishlist">Add to wishlist</span>
+                      <i class="fa-regular fa-heart stop-animation"></i>
                       <i class="fa-solid fa-heart d-none"></i>
                     </a>
                   </div>
 
                   <div class="product-shuffle-eyeglasses">
                     <div class="icons">
-                      <i class="fa-solid fa-shuffle"></i>
+                      <i class="fa-solid fa-shuffle stop-animation"></i>
                       <span class="vertical-line"></span>
-                      <i class="fa-solid fa-glasses"></i>
+                      <i class="fa-solid fa-glasses stop-animation"></i>
                     </div>
                   </div>
 
                   <div class="product-featured">
-                    <span>New</span>
+                    <span class="stop-animation">New</span>
 
                   </div>
 
@@ -1203,11 +1207,13 @@
                     <h6 class="product-name">Hazelnut</h6>
                     <h6 class="product-price"><span class="discount">$34</span><span>$28</span><span>(15%
                         discount)</span></h6>
-                    <a href="#" class="product-add-to-cart"><i class="fas fa-shopping-basket"></i>Add to
+                    <a href="#" class="product-add-to-cart no-hover"><i class="fas fa-shopping-basket stop-animation"></i>Add to
                       cart</a>
 
 
                   </div>
+
+                  <div class="out-of-stock">Out Of Stock</div>
 
 
 
@@ -1270,7 +1276,7 @@
               </div>
 
               <div class="col-sm-12 col-md-6 col-lg-3">
-                <div class="product card" style="width: 18rem;">
+                <div class="product card product-out-of-stock" style="width: 18rem;">
 
                   <div class="product-images">
                     <a href="product.html">
@@ -1282,22 +1288,22 @@
 
                   <div class="product-add-to-wishlist">
                     <a href="#">
-                      <span class="wishlist">Add to wishlist</span>
-                      <i class="fa-regular fa-heart"></i>
+                      <span class="no-wishlist wishlist">Add to wishlist</span>
+                      <i class="fa-regular fa-heart stop-animation"></i>
                       <i class="fa-solid fa-heart d-none"></i>
                     </a>
                   </div>
 
                   <div class="product-shuffle-eyeglasses">
                     <div class="icons">
-                      <i class="fa-solid fa-shuffle"></i>
+                      <i class="fa-solid fa-shuffle stop-animation"></i>
                       <span class="vertical-line"></span>
-                      <i class="fa-solid fa-glasses"></i>
+                      <i class="fa-solid fa-glasses stop-animation"></i>
                     </div>
                   </div>
 
                   <div class="product-featured">
-                    <span>New</span>
+                    <span class="stop-animation">New</span>
 
                   </div>
 
@@ -1314,11 +1320,13 @@
                     <h6 class="product-name">Butter</h6>
                     <h6 class="product-price"><span class="discount">$34</span><span>$28</span><span>(15%
                         discount)</span></h6>
-                    <a href="#" class="product-add-to-cart"><i class="fas fa-shopping-basket"></i>Add to
+                    <a href="#" class="product-add-to-cart no-hover"><i class="fas fa-shopping-basket stop-animation"></i>Add to
                       cart</a>
 
 
                   </div>
+
+                  <div class="out-of-stock">Out Of Stock</div>
 
 
 
@@ -1596,7 +1604,7 @@
                   <ul>
                     <li><a href="contact.html"><span>Address: </span>1429 Netus Rd, NY 48247</a></li>
                     <li><a href="contact.html"><span>Email: </span>organi_824@gmail.com</a></li>
-                    <li><a href="contact.html"><span>Phone: </span>(+994) 050-717-18-30</a></li>
+                    <li><a href="contact.html"><span>Phone: </span>+1 (646) 555-3911</a></li>
                     <li><a href=""><span>Payment Accepted</span></a></li>
                     <li><a href=""><img src="assets/images/info-logos/payment.png" alt=""></a></li>
                   </ul>
