--- a/Frontend - Organi/blog.html
+++ b/Frontend - Organi/blog.html
@@ -838,7 +838,7 @@
                   <ul>
                     <li><a href="contact.html"><span>Address: </span>1429 Netus Rd, NY 48247</a></li>
                     <li><a href="contact.html"><span>Email: </span>organi_824@gmail.com</a></li>
-                    <li><a href="contact.html"><span>Phone: </span>(+994) 050-717-18-30</a></li>
+                    <li><a href="contact.html"><span>Phone: </span>+1 (646) 555-3911</a></li>
                     <li><a href=""><span>Payment Accepted</span></a></li>
                     <li><a href=""><img src="assets/images/info-logos/payment.png" alt=""></a></li>
                   </ul>
