finish responsive of about page

--- a/Frontend - Organi/product.html
+++ b/Frontend - Organi/product.html
@@ -375,6 +375,7 @@
                                 <div class="product-price">
                                     <span>$34</span>
                                     <span>$28</span>
+                                    <span class="discount">(15% discount)</span>
                                 </div>
 
                                 <div class="product-rating-review">
